# rust-g-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
3d_shape_orbit_simulation/: Cargo.toml
3d_shape_orbit_simulation/src/: main.rs  physics.rs  shape.rs  simulation.rs  vector_3d.rs
3d_shape_physics_simulation/src/: main.rs  shape.rs  simulation.rs
src/: body.rs  camera.rs  color.rs  debug.rs  font.rs  frustum.rs  grid.rs  main.rs  model.rs  particle.rs  physics.rs  polygons.rs  shaders.rs  shape.rs  simulation.rs  text_writer.rs  vector_3d.rs  vectors.rs  vertices.rs
src/abstracts/: body.rs  mod.rs
src/components/: backface_culling.rs  buffer_sort.rs  bvh.rs  camera.rs  color.rs  convex_hull.rs  decomposition.rs  draw_call.rs  font.rs  frametime.rs  frustum.rs  graphics.rs  mod.rs  model.rs  physics.rs  polygons.rs  shaders.rs  shape.rs  simulation.rs  text_writer.rs  vectors.rs  vertices.rs  z_buffer.rs
src/configurations/: body_configurations.rs  mod.rs
