[package]
name = "rust-g-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = "2.1"
rand = "0.8"
rayon = "1.7.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"


[profile.release]
opt-level = 2
debug = 2